--- a/css/styles_index.css
+++ b/css/styles_index.css
@@ -1,11 +1,12 @@
 body {
-    font-family: "Trebuchet MS";
+    /*font-family: "Trebuchet MS";*/
 }
 .menu {
     display: flex;                /* Transformation en flexbox */
     padding:0;                    /* Suppression des marges internes */
     background-color: #2e2e2e;       /* Ajout de la couleur d'arrière-plan */
     justify-content: space-around;/* Alignements des liens dans le menu */
+    color: #e5b567;
 }
 .menu li {
     list-style-type: none ;       /* Suppression des puces */
