--- a/css/styles_memoire.css
+++ b/css/styles_memoire.css
@@ -35,11 +35,17 @@ margin-bottom: 5px;
 .toc a:hover {
 text-decoration: underline;
 }
-.toc .toc-h2 {
-margin-left: 10px;
+
+
+.toc-h1 {
+    font-weight: bold;
+    margin-left: 0;
 }
-.toc .toc-h3 {
-margin-left: 20px;
+.toc-h2 {
+    margin-left: 20px;
+}
+.toc-h3 {
+    margin-left: 40px;
 }
 
 .toc-toggle {
