--- a/css/styles_index.css
+++ b/css/styles_index.css
@@ -18,6 +18,7 @@ body {
     background-color: #2e2e2e;       /* Ajout de la couleur d'arrière-plan */
     justify-content: space-around;/* Alignements des liens dans le menu */
     color: #e5b567;
+    list-style: none;
 }
 .menu li {
     list-style-type: none ;       /* Suppression des puces */
