--- a/css/styles_index.css
+++ b/css/styles_index.css
@@ -59,3 +59,10 @@ html, body {
 .menu a:visited {
     color: #272822;
 }
+
+footer {
+    background: #333;
+    color: #fff;
+    text-align: center;
+    padding: 1rem;
+  }
