--- a/contact/css/style.css
+++ b/contact/css/style.css
@@ -8314,3 +8314,11 @@ textarea.form-control {
   display: none;
   font-size: 16px;
   font-weight: bold; }
+
+
+footer {
+  background: #333;
+  color: #fff;
+  text-align: center;
+  padding: 1rem;
+}
